--- a/public/css/main.css
+++ b/public/css/main.css
@@ -197,7 +197,7 @@ header svg {
 }
 
 .main aside div {
-	padding: 0px 5% 10px;
+	padding: 0 5% 10px;
 }
 
 
@@ -253,7 +253,7 @@ nav a {
 }
 
 nav li:first-child a {
-    margin-right: 0px;
+    margin-right: 0;
 }
 
 nav li:last-child a {
@@ -313,7 +313,9 @@ div.settings {
 }
 
 
-
+section table {
+    width: 100%;
+}
 
 
 
