--- a/views/includes/invest.jade
+++ b/views/includes/invest.jade
@@ -1,5 +1,6 @@
 section
     h2 Invest
+    span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.invest=true',ng-mouseout='settings.helptopic.invest=false') ?
     .settings(ng-show='settings.show')
         form(ng-submit='addBtcTcApiKey()')
             input(type='text', ng-model='invest.BtcTcApiKey', placeholder='Add btct.co API key')
@@ -7,14 +8,14 @@ section
     div
         table(ng-show='invest.BtcTcApiKey')
             tr
-                th Ticker
-                th.right(title='latest bid') Bid
-                th.right(title='quantity hold') Qty
-                th.right(title='total btc') BTC
-                th.right(title='total usd') USD
-                th.right(title='total usd') 24h
-                th.right(title='total usd') 7d
-                th.right(title='total usd') 30d
+                th(width="20%") Ticker
+                th.right(title='latest bid',width="50px") Bid
+                th.right(title='quantity hold',width="50px") Qty
+                th.right(title='total btc',width="70px") BTC
+                th.right(title='total usd',width="90px") USD
+                th.right.hidesm(title='total usd',width="50px") 24h
+                th.right.hidesm(title='total usd',width="50px") 7d
+                th.right.hidesm(title='total usd',width="50px") 30d
             tr(ng-repeat='security in invest.btctc.securities', ng-show='security.market.bid')
                 td
                     a(target='_blank', title='view on btct.co', href='https://btct.co/security/{{security.market.ticker}}', ng-show='security.market.ticker') {{security.market.ticker}}
@@ -24,11 +25,11 @@ section
                 td.right
                     | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(security.total_value)| currency:""}}
 
-                td.right(ng-class="{negative: getTickerChange(security, '24h_avg') < 0, positive: getTickerChange(security, '24h_avg') > 0}")
+                td.right.hidesm(ng-class="{negative: getTickerChange(security, '24h_avg') < 0, positive: getTickerChange(security, '24h_avg') > 0}")
                     {{getTickerChange(security, '24h_avg') | number:1}}%
-                td.right(ng-class="{negative: getTickerChange(security, '7d_avg') < 0, positive: getTickerChange(security, '7d_avg') > 0}")
+                td.right.hidesm(ng-class="{negative: getTickerChange(security, '7d_avg') < 0, positive: getTickerChange(security, '7d_avg') > 0}")
                     {{getTickerChange(security, '7d_avg') | number:1}}%
-                td.right(ng-class="{negative: getTickerChange(security, '30d_avg') < 0, positive: getTickerChange(security, '30d_avg') > 0}")
+                td.right.hidesm(ng-class="{negative: getTickerChange(security, '30d_avg') < 0, positive: getTickerChange(security, '30d_avg') > 0}")
                     {{getTickerChange(security, '30d_avg') | number:1}}%
 
 
@@ -37,10 +38,10 @@ section
                 td.right {{invest.btctc.balance.BTC| currency:""}}
                 td.right
                     | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.btctc.balance.BTC)| currency:""}}
-                td(colspan='3')
+                td.hidesm(colspan='3')
             tr
                 td.right.bold(colspan='3') Total
                 td.right.bold {{invest.totalbtc| currency: ""}}
                 td.right.bold
                     | {{market.bitcoindata.info.symbol_local.symbol}}{{getUsd(invest.totalbtc)| currency: ""}}
-                td(colspan='3')
+                td.hidesm(colspan='3')
