--- a/views/includes/spend.jade
+++ b/views/includes/spend.jade
@@ -1,5 +1,6 @@
 section
     h2 Spend
+    span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.spend=true',ng-mouseout='settings.helptopic.spend=false') ?
     .settings(ng-show='settings.show')
         form(ng-submit='addSpendValue()')
             input(type='text', ng-model='spend.ValueAdd', placeholder='Add btc (+/-)')
