--- a/public/css/main.css
+++ b/public/css/main.css
@@ -225,7 +225,7 @@ header svg {
 }
 
 .negative {
-	color: #7F0000;	
+	color: #AF0000;
 }
 
 .help {
@@ -240,9 +240,124 @@ header svg {
 
 
 
-table { width:100%;table-layout:fixed; }
-table tr { height:1em;  }
-td { overflow:hidden;white-space:nowrap;  }
+table {
+    line-height: 1.4em;
+    width: 100%;
+}
+
+table.fixed {
+    table-layout: fixed;
+}
+
+td {
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space:nowrap;
+}
+
+td.ticker, td.address {
+    font-size: 0.8em;
+}
+
+th {
+    text-align: left;
+}
+
+td {
+    padding: 0;
+}
+
+td.right, th.right {
+    text-align: right;
+}
+
+td.bold {
+    font-weight: bold;
+}
+
+td.action {
+    font-size: 0.8em;
+}
+
+
+tr  {
+    border-bottom: 1px solid #CFCCBF;
+}
+
+tr.noborder  {
+     border-bottom: none;
+}
+
+
+
+
+
+
+a, a:visited, a:active {
+    text-decoration: none;
+    color: #743300;
+}
+
+a:hover {
+    color: #C45000;
+}
+
+
+
+.cf:after { visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
+* html .cf { zoom: 1; }
+*:first-child+html .cf { zoom: 1; }
+
+
+.rt { width: 100%; border-collapse: collapse; border-spacing: 0; }
+
+.rt th,
+.rt td { margin: 0; vertical-align: top;  }
+
+
+
+@media only screen and (max-width: 40em) { /*640*/
+
+    #rt1 { display: block; position: relative; width: 100%; }
+    #rt1 thead { display: block; float: left; }
+    #rt1 tbody.transform { display: block; width: auto; position: relative; overflow-x: auto; white-space: nowrap; }
+    #rt1 thead tr { display: block;  padding: 0 10px 0; }
+    #rt1 th { display: block; min-height: 24px;}
+    #rt1 tbody.transform tr { display: inline-block; vertical-align: top; padding: 0 10px 0; }
+    #rt1 tbody.transform td { display: block; min-height: 26px; }
+
+    /* sort out borders */
+
+    .rt tbody.transform tr { border-bottom: none; }
+    .rt thead tr { border-bottom: none; }
+
+    .rt tbody.transform tr { border-right: 1px solid #CFCCBF; }
+    .rt thead tr { border-right: 1px solid #CFCCBF; }
+
+/*    .rt td { border-left: 0; border-right: 0; border-bottom: 0; }
+
+    .rt th:last-child,
+    .rt td:last-child { border-bottom: 1px solid #babcbf; }*/
+
+    #rt1 thead { padding-bottom: 10px;}
+    #rt1 tbody.transform { padding-bottom: 10px;}
+
+    .rt tbody.sum tr { border-top: 1px solid #CFCCBF;  }
+    .rt tbody.sum td { padding: 2px 7px; }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ====================
@@ -307,35 +422,6 @@ nav li:last-child a {
 
 
 
-th {
-	padding: 3px 10px 3px 0;
-	text-align: left;
-}
-
-td {
-	padding: 3px 10px 3px 0;
-}
-
-tr {
-	border-bottom: 1px solid lightgrey;
-	
-}
-
-tr:last-child {
-	border-bottom: none;
-}
-
-td.right, th.right {
-	text-align: right;
-}
-
-td.bold {
-	font-weight: bold;
-}
-
-td.action {
-	font-size: 10px;
-}
 
 
 
@@ -345,9 +431,6 @@ div.settings {
 }
 
 
-section table {
-    width: 100%;
-}
 
 
 
@@ -364,9 +447,9 @@ section table {
 
 
 
-.hidesm {
+/*.hidesm {
     display: none;
-}
+}*/
 
 
 
