Basic Grunt Build

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,8 +14,9 @@ html(ng-app)
         link(rel='apple-touch-icon', sizes='144x144', href='img/apple-touch-icon-ipad3.png')
         link(href='http://fonts.googleapis.com/css?family=Merriweather+Sans:300,700', rel='stylesheet', type='text/css')
         link(href='http://fonts.googleapis.com/css?family=Donegal+One', rel='stylesheet', type='text/css')
-        link(rel='stylesheet', href='css/normalize.min.css')
-        link(rel='stylesheet', href='css/main.css')
+
+        link(rel='stylesheet', href='css/app-0.0.7.css')
+        script(src='/js/app-0.0.7.js')
 
 
     body(ng-controller='BTC')
@@ -122,6 +123,3 @@ html(ng-app)
 
 
 
-
-    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js')
-    script(src='/js/main.js')
