--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,9 @@ html(ng-app)
         link(href='http://fonts.googleapis.com/css?family=Donegal+One', rel='stylesheet', type='text/css')
 
         link(rel='stylesheet', href='css/app-0.0.8.css')
-        script(src='/js/app-0.0.8.js')
+        script(src='/js/app-0.0.9.js')
+        //script(src='/js/main.js')
+        //script(src='/js/angular.min.js')
 
 
     body(ng-controller='BTC')
@@ -121,5 +123,14 @@ html(ng-app)
 
 
 
+
+    script
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-40868367-1', 'btc-folio.info');
+        ga('send', 'pageview');
 
 
