--- a/views/includes/save.jade
+++ b/views/includes/save.jade
@@ -1,5 +1,6 @@
 section
     h2 Save
+    span.spinner(ng-show='market.loading > 0') &nbsp;
     span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.save=true',ng-mouseout='settings.helptopic.save=false') ?
     .settings(ng-show='settings.show')
         form(ng-submit='addAddress()')
