--- a/views/includes/market.jade
+++ b/views/includes/market.jade
@@ -1,5 +1,6 @@
 section
     h2 Market
+    span.spinner(ng-show='market.loading > 0') &nbsp;
     span.help(ng-show='settings.show',ng-mouseover='settings.helptopic.market=true',ng-mouseout='settings.helptopic.market=false') ?
     div(ng-show='market.bitcoindata')
         table
